--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,15 @@
 </head>
 <body>
 <p> welcome to the chat app</p>
+<ol id="messages">
+</ol>
+<form id="message-form">
+    <input type="text" placeholder="message..." name="message">
+    <button>Send</button>
+
+</form>
 <script src="/socket.io/socket.io.js"></script>
+<script src="/js/libs/jquery-3.2.0.min.js"></script>
 <script src="/js/index.js"></script>
 </body>
 </html>
